--- a/_resources/css/default.css
+++ b/_resources/css/default.css
@@ -351,6 +351,9 @@ table.type02 td {
 table.type02 td.bd_left {
 	border-left: 1px solid #e2e4ea;
 }
+table.type02 .bd_top {
+	border-top: 1px solid #e2e4ea;
+}
 table.type02 td:last-child {
 	border-right: none
 }
@@ -850,13 +853,13 @@ select {
 	margin-top: 30px;
 }
 .c_txt {
-	text-align: center
+	text-align: center !important;
 }
 .l_txt {
-	text-align: left;
+	text-align: left !important;
 }
 .r_txt {
-	text-align: right;
+	text-align: right !important;
 }
 .fl_l {
 	float: left;
